<resources>
    <string name="app_name">NsuSchedule</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="mondayTab">пн</string>
    <string name="tuesdayTab">вт</string>
    <string name="wednesdayTab">ср</string>
    <string name="thursdayTab">чт</string>
    <string name="fridayTab">пт</string>
    <string name="saturdayTab">сб</string>
    <string name="sundayTab">вс</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Расписание</string>
    <string name="nav_my_schedule_title">Мое расписание</string>
    <string name="nav_create_event_title">Добавить событие в расписание</string>
    <string name="summary">Название</string>
    <string name="description">Описание</string>
    <string name="location">Место</string>
    <string name="create_event_button_title">Создать событие</string>
    <string name="create_event_choose_date_title">Выберите дату</string>
    <string name="create_event_start_time_title">Время начала</string>
    <string name="create_event_end_time_title">Время окончания</string>
    <string name="event_context_menu_delete_event_title">Удалить событие</string>


    <string-array name="repeating_enum_values">
        <item>ONCE</item>
        <item>DAY</item>
        <item>MONTH</item>
        <item>WEEK</item>
        <item>TWO_WEEK</item>
        <item>YEAR</item>
    </string-array>
    <string name="repeating_enum_default_value">Не повторяется</string>
    <string name="snackbar_event_created">Событие создано!</string>
    <string name="createEventFragmentLabel">Создать событие</string>
    <string name="weekScheduleFragmentLabel">Расписание</string>
    <string name="download_from_url_button_label">Скачать по ссылке</string>
    <string name="nav_import_schedule_title">Загрузить расписание</string>
    <string name="group_number_hint">Номер группы</string>
    <string name="download_from_nsu_button_label">Скачать с сайта НГУ</string>
    <string name="download_from_url_hint">Ссылка</string>
    <string name="nsu_link_for_group">https://table.nsu.ru/ics/group/</string>
    <string name="add_all_button_label">Добавить события в свое расписание</string>
    <string name="add_event_to_schedule_item_label">Добавить в свое расписание</string>
    <string-array name="repeating_enum_translations">
        <item>@string/repeating_enum_default_value</item>
        <item>Повторяется каждый день</item>
        <item>Повторяется каждый месяц</item>
        <item>Повторяется каждую неделю</item>
        <item>Повторяется каждые две недели</item>
        <item>Повторяется каждый год</item>
    </string-array>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notifications_switch_label">Показывать уведомления</string>
    <string name="alarms_switch_label">Включить будильники перед событиями</string>
    <string name="settings_fragment_label">Настройки</string>
    <string name="downloaded_schedule_fragment_label">Просмотр расписания</string>
</resources>