<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:hint="@string/download_from_url_hint"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/download_url_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_marginTop="5dp"
        android:id="@+id/download_url_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/download_from_url_button_label" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="40dp"
        android:hint="@string/group_number_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/group_number_text_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_marginTop="5dp"
        android:id="@+id/download_nsu_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/download_from_nsu_button_label" />


</LinearLayout>