<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    tools:context=".ui.create_event.CreateEventFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/summary_text_input"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_width="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/summary"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description_text_input"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_width="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/description"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/location_text_input"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_width="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/location"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/purple_500"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/chose_date_text_view"
            android:layout_height="wrap_content"
            android:layout_margin="2pt"
            android:layout_width="wrap_content"
            android:text="@string/create_event_choose_date_title"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            style="?android:spinnerStyle"
            android:id="@+id/date_picker_button"
            android:layout_height="wrap_content"
            android:layout_margin="2pt"
            android:layout_marginTop="10dp"
            android:layout_width="0dp"
            android:text="12 Января 2021г."
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/chose_date_text_view"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="HardcodedText" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/purple_500"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/start_time_title_text_view"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:text="@string/create_event_start_time_title"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            style="?android:spinnerStyle"
            android:id="@+id/start_time_button"
            android:layout_height="wrap_content"
            android:layout_margin="2pt"
            android:layout_marginTop="10dp"
            android:layout_width="0dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/start_time_title_text_view"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/purple_500"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/end_time_title_text_view"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:text="@string/create_event_end_time_title"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            style="?android:spinnerStyle"
            android:id="@+id/end_time_button"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_marginTop="10dp"
            android:layout_width="0dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/end_time_title_text_view"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"

        android:layout_width="match_parent"
        app:boxBackgroundColor="@color/purple_500">

        <AutoCompleteTextView
            android:id="@+id/repeating_text_view"
            android:inputType="none"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:padding="5dp"
            android:text="@string/repeating_enum_default_value"
            android:textSize="18sp"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/create_event_button"
        android:layout_height="wrap_content"
        android:layout_margin="2pt"
        android:layout_width="wrap_content"
        android:text="@string/create_event_button_title" />
</LinearLayout>